--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -162,16 +162,16 @@
                 <span class="coverage-count">(2/6)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/HomepageComponent.html">src/app/components/homepage/homepage.component.ts</a>
             </td>
             <td>component</td>
             <td>HomepageComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="40">
+                <span class="coverage-percent">40 %</span>
+                <span class="coverage-count">(2/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -270,16 +270,16 @@
                 <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/CountriesService.html">src/app/countries.service.ts</a>
             </td>
             <td>injectable</td>
             <td>CountriesService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(1/3)</span>
             </td>
         </tr>
         <tr class="low">
